--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 
+############# Database Properties ###########################################
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/social-network?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=2539
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialize=true
+spring.jpa.show-sql=true
+############# Mail Properties ###########################################
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=15fa66d21c04c6
+spring.mail.password=10513411d17a40
+spring.mail.protocol=smtp
