Implemented User Auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.mail.port=2525
 spring.mail.username=15fa66d21c04c6
 spring.mail.password=10513411d17a40
 spring.mail.protocol=smtp
+############ JWT Properties #####################
+jwt.expiration.time=90000
